# parquet_nfs_db_cache

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  build_and_run.sh  main.py  parquet_backed_disk_cache.txt  parquet_backed_nfs_cache.txt  pyproject.toml  swarm.py  swarm_file.py  swarm_sql.py
database/: oracle_env.py  oracle_read.py  oracle_write.py  oracle_write_container.py
disk_cache/: __init__.py  db_cache.py  nfs_cache.py
disk_cache/data/: data_container.py
init/: 001_create_user_and_privs.sql
nfs_cache/: __init__.py  db_cache.py
nfs_cache/data/: data_container.py  data_holder.py  dataframe_holder.py
nfs_cache/util/: generate_parquets.py
nfscache/: __init__.py  nfs_cache.py  nfs_parquet_cache.py
nfscache/data/: data_container.py
nfscache/database/: oracle_arrow.py  oracle_pool.py  oracle_read.py  oracle_streaming.py  oracle_write.py  oracle_write_container.py
nfscache/util/: generate_parquets.py  swarm_file.py  swarm_sql.py  swarm_stream.py
tests/: test_db_cache_locking.py  test_db_cache_metadata.py  test_nfs_cache_locking.py  test_nfs_cache_metadata.py  test_nfs_cache_sql.py  test_oracle_pool.py  test_oracle_streaming.py
