[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfscache"
version = "0.1.0"
description = "Concurrency-safe, NFS-friendly Parquet cache for Polars DataFrames"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
  "matplotlib>=3.10.9,<4",
  "numpy>=2.4.6,<3",
  "oracledb>=3.4.2,<4",
  "polars>=1.41.2,<2",
  "psutil>=7.2.2,<8",
  "pyarrow>=24.0.0,<25",
]

[project.scripts]
nfscache = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["database", "nfscache"]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
