[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfscache"
version = "0.1.0"
description = "Concurrency-safe, NFS-friendly Parquet cache for Polars DataFrames"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"

authors = [
  { name = "Torbjörn Sjögren" }
]

dependencies = [
  "numpy>=2.4.6,<3",
  "oracledb>=3.4.2,<4",
  "polars>=1.41.2,<2",
  "pyarrow>=24.0.0,<25",
]

[project.scripts]
nfscache = "nfscache.util.main:main"

[tool.hatch.build.targets.wheel]
packages = ["nfscache"]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
