[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfscache"
version = "0.1.2"
description = "Concurrency-safe, NFS-friendly Parquet cache for Databases"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"
keywords = ["cache", "parquet", "nfs", "oracle", "concurrency"]

authors = [
    { name = "Torbjörn Sjögren" }
]

dependencies = [
    "numpy>=2.4.6,<3",
    "pyarrow>=24.0.0,<25",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Filesystems",
]

[project.optional-dependencies]
oracle = [
    "oracledb>=3.4.2,<4",
]

[tool.hatch.build.targets.wheel]
packages = ["nfscache"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".gitignore",
    "CLAUDE.md",
    "AGENTS.md",
    "Dockerfile",
    "build_and_run.sh",
    "uv.lock",
    "init/",
    "tests/",
    "parquet_backed_disk_cache.txt",
]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
